crates/cockpitctl-render/tests/snapshots/golden_tests__golden_budget_exactly_met.snap
---
source: crates/cockpitctl-render/tests/golden_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `lint` | ❌ fail | yes | `artifacts/lint/report.json` · `artifacts/lint/comment.md` |

### Highlights

(showing up to **5**)

1. ❌ **lint**: `EXACT-000` at `src/main.rs:1` — Message for EXACT-000
2. ❌ **lint**: `EXACT-001` at `src/main.rs:2` — Message for EXACT-001
3. ❌ **lint**: `EXACT-002` at `src/main.rs:3` — Message for EXACT-002
4. ❌ **lint**: `EXACT-003` at `src/main.rs:4` — Message for EXACT-003
5. ❌ **lint**: `EXACT-004` at `src/main.rs:5` — Message for EXACT-004

### Annotations

1. ❌ **lint**: `EXACT-000` at `src/main.rs:1` — Message for EXACT-000
2. ❌ **lint**: `EXACT-001` at `src/main.rs:2` — Message for EXACT-001
3. ❌ **lint**: `EXACT-002` at `src/main.rs:3` — Message for EXACT-002
4. ❌ **lint**: `EXACT-003` at `src/main.rs:4` — Message for EXACT-003
5. ❌ **lint**: `EXACT-004` at `src/main.rs:5` — Message for EXACT-004

### Lint

- `lint`: ❌ fail · report `artifacts/lint/report.json` · comment `artifacts/lint/comment.md`

<!-- cockpit:end -->
