crates/cockpitctl-render/tests/snapshots/golden_tests__golden_budget_exceeded_by_one.snap
---
source: crates/cockpitctl-render/tests/golden_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `lint` | ⚠️ warn | yes | `artifacts/lint/report.json` · `artifacts/lint/comment.md` · _truncated_ |

### Highlights

(showing up to **5**)

1. ⚠️ **lint**: `OVER1-000` at `src/lib.rs:1` — Message for OVER1-000
2. ⚠️ **lint**: `OVER1-001` at `src/lib.rs:11` — Message for OVER1-001
3. ⚠️ **lint**: `OVER1-002` at `src/lib.rs:21` — Message for OVER1-002
4. ⚠️ **lint**: `OVER1-003` at `src/lib.rs:31` — Message for OVER1-003
5. ⚠️ **lint**: `OVER1-004` at `src/lib.rs:41` — Message for OVER1-004
6. ⚠️ **lint**: `OVER1-005` at `src/lib.rs:51` — Message for OVER1-005

### Annotations

1. ⚠️ **lint**: `OVER1-000` at `src/lib.rs:1` — Message for OVER1-000
2. ⚠️ **lint**: `OVER1-001` at `src/lib.rs:11` — Message for OVER1-001
3. ⚠️ **lint**: `OVER1-002` at `src/lib.rs:21` — Message for OVER1-002
4. ⚠️ **lint**: `OVER1-003` at `src/lib.rs:31` — Message for OVER1-003
5. ⚠️ **lint**: `OVER1-004` at `src/lib.rs:41` — Message for OVER1-004

_Showing 5 of 6 annotations (capped by `max_annotations`)._

### Lint

- `lint`: ⚠️ warn · report `artifacts/lint/report.json` · comment `artifacts/lint/comment.md`

<!-- cockpit:end -->
