crates/cockpitctl-render/tests/snapshots/golden_tests__golden_empty_sensor_id.snap
---
source: crates/cockpitctl-render/tests/golden_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `` | ❌ fail | yes | `artifacts//report.json` · `artifacts//comment.md` |

### Highlights

(showing up to **5**)

1. ❌ ****: `EMPTY-ID` at `src/main.rs:1` — Message for EMPTY-ID

### Annotations

1. ❌ ****: `EMPTY-ID` at `src/main.rs:1` — Message for EMPTY-ID

### Other

- ``: ❌ fail · report `artifacts//report.json` · comment `artifacts//comment.md`

<!-- cockpit:end -->
