crates/cockpitctl-render/tests/snapshots/golden_tests__golden_five_sensors_all_fail.snap
---
source: crates/cockpitctl-render/tests/golden_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `alpha` | ❌ fail | yes | `artifacts/alpha/report.json` · `artifacts/alpha/comment.md` |
| `bravo` | ❌ fail | yes | `artifacts/bravo/report.json` · `artifacts/bravo/comment.md` |
| `charlie` | ❌ fail | yes | `artifacts/charlie/report.json` · `artifacts/charlie/comment.md` |
| `delta` | ❌ fail | yes | `artifacts/delta/report.json` · `artifacts/delta/comment.md` |
| `echo` | ❌ fail | yes | `artifacts/echo/report.json` · `artifacts/echo/comment.md` |

### Highlights

(showing up to **10**)

1. ❌ **alpha**: `ALPHA-ERR` at `src/alpha.rs:1` — Message for ALPHA-ERR
2. ❌ **bravo**: `BRAVO-ERR` at `src/bravo.rs:1` — Message for BRAVO-ERR
3. ❌ **charlie**: `CHARLIE-ERR` at `src/charlie.rs:1` — Message for CHARLIE-ERR
4. ❌ **delta**: `DELTA-ERR` at `src/delta.rs:1` — Message for DELTA-ERR
5. ❌ **echo**: `ECHO-ERR` at `src/echo.rs:1` — Message for ECHO-ERR

### Annotations

1. ❌ **alpha**: `ALPHA-ERR` at `src/alpha.rs:1` — Message for ALPHA-ERR
2. ❌ **bravo**: `BRAVO-ERR` at `src/bravo.rs:1` — Message for BRAVO-ERR
3. ❌ **charlie**: `CHARLIE-ERR` at `src/charlie.rs:1` — Message for CHARLIE-ERR
4. ❌ **delta**: `DELTA-ERR` at `src/delta.rs:1` — Message for DELTA-ERR
5. ❌ **echo**: `ECHO-ERR` at `src/echo.rs:1` — Message for ECHO-ERR

### Checks

- `alpha`: ❌ fail · report `artifacts/alpha/report.json` · comment `artifacts/alpha/comment.md`
- `bravo`: ❌ fail · report `artifacts/bravo/report.json` · comment `artifacts/bravo/comment.md`
- `charlie`: ❌ fail · report `artifacts/charlie/report.json` · comment `artifacts/charlie/comment.md`
- `delta`: ❌ fail · report `artifacts/delta/report.json` · comment `artifacts/delta/comment.md`
- `echo`: ❌ fail · report `artifacts/echo/report.json` · comment `artifacts/echo/comment.md`

<!-- cockpit:end -->
