crates/cockpitctl-render/tests/snapshots/golden_tests__golden_long_file_paths.snap
---
source: crates/cockpitctl-render/tests/golden_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `lint` | ❌ fail | yes | `artifacts/lint/report.json` · `artifacts/lint/comment.md` |

### Highlights

(showing up to **5**)

1. ❌ **lint**: `LONG-PATH-001` at `src/very/deeply/nested/directory/structure/that/goes/on/and/on/and/on/module_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.rs:42` — Message for LONG-PATH-001
2. ⚠️ **lint**: `LONG-PATH-002` at `src/normal.rs:1` — Message for LONG-PATH-002

### Annotations

1. ❌ **lint**: `LONG-PATH-001` at `src/very/deeply/nested/directory/structure/that/goes/on/and/on/and/on/module_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.rs:42` — Message for LONG-PATH-001
2. ⚠️ **lint**: `LONG-PATH-002` at `src/normal.rs:1` — Message for LONG-PATH-002

### Lint

- `lint`: ❌ fail · report `artifacts/lint/report.json` · comment `artifacts/lint/comment.md`

<!-- cockpit:end -->
