crates/cockpitctl-render/tests/snapshots/golden_tests__golden_mixed_verdicts_all_four.snap
---
source: crates/cockpitctl-render/tests/golden_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `builddiag` | ✅ pass | yes | `artifacts/builddiag/report.json` · `artifacts/builddiag/comment.md` |
| `clippy` | ⚠️ warn | yes | `artifacts/clippy/report.json` · `artifacts/clippy/comment.md` |
| `covguard` | ⏭ skip | no | `artifacts/covguard/report.json` · `artifacts/covguard/comment.md` |
| `trivy` | ❌ fail | yes | `artifacts/trivy/report.json` · `artifacts/trivy/comment.md` |

### Highlights

(showing up to **10**)

1. ❌ **trivy**: `CVE-2024-9999` at `Cargo.lock:42` — Message for CVE-2024-9999
2. ⚠️ **clippy**: `W-UNUSED-VAR` at `src/lib.rs:10` — Message for W-UNUSED-VAR

### Annotations

1. ❌ **trivy**: `CVE-2024-9999` at `Cargo.lock:42` — Message for CVE-2024-9999
2. ⚠️ **clippy**: `W-UNUSED-VAR` at `src/lib.rs:10` — Message for W-UNUSED-VAR

### Build

- `builddiag`: ✅ pass · report `artifacts/builddiag/report.json` · comment `artifacts/builddiag/comment.md`

### Lint

- `clippy`: ⚠️ warn · report `artifacts/clippy/report.json` · comment `artifacts/clippy/comment.md`

### Security

- `trivy`: ❌ fail · report `artifacts/trivy/report.json` · comment `artifacts/trivy/comment.md`

### Coverage

- `covguard`: ⏭ skip · report `artifacts/covguard/report.json` · comment `artifacts/covguard/comment.md`

<!-- cockpit:end -->
