crates/cockpitctl-render/tests/snapshots/golden_tests__golden_no_findings.snap
---
source: crates/cockpitctl-render/tests/golden_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `builddiag` | ✅ pass | yes | `artifacts/builddiag/report.json` · `artifacts/builddiag/comment.md` |
| `clippy` | ✅ pass | yes | `artifacts/clippy/report.json` · `artifacts/clippy/comment.md` |

### Highlights

_No highlights._

### Annotations

_No annotations._

### Build

- `builddiag`: ✅ pass · report `artifacts/builddiag/report.json` · comment `artifacts/builddiag/comment.md`

### Lint

- `clippy`: ✅ pass · report `artifacts/clippy/report.json` · comment `artifacts/clippy/comment.md`
  - repro: `cargo clippy`

<!-- cockpit:end -->
