crates/cockpitctl-render/tests/snapshots/golden_tests__golden_single_failure.snap
---
source: crates/cockpitctl-render/tests/golden_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `builddiag` | ✅ pass | yes | `artifacts/builddiag/report.json` · `artifacts/builddiag/comment.md` |
| `cargo-test` | ❌ fail | yes | `artifacts/cargo-test/report.json` · `artifacts/cargo-test/comment.md` |
| `clippy` | ✅ pass | yes | `artifacts/clippy/report.json` · `artifacts/clippy/comment.md` |

### Highlights

(showing up to **10**)

1. ❌ **cargo-test**: `TEST-FAIL-001` at `tests/integration.rs:55` — Message for TEST-FAIL-001

### Annotations

1. ❌ **cargo-test**: `TEST-FAIL-001` at `tests/integration.rs:55` — Message for TEST-FAIL-001

### Build

- `builddiag`: ✅ pass · report `artifacts/builddiag/report.json` · comment `artifacts/builddiag/comment.md`

### Lint

- `clippy`: ✅ pass · report `artifacts/clippy/report.json` · comment `artifacts/clippy/comment.md`

### Tests

- `cargo-test`: ❌ fail · report `artifacts/cargo-test/report.json` · comment `artifacts/cargo-test/comment.md`

<!-- cockpit:end -->
